Edited content, refined styling

--- a/_posts/2019-01-17-924-grand.md
+++ b/_posts/2019-01-17-924-grand.md
@@ -1,13 +1,17 @@
 ---
-title: 924 Grand Ave
+title: Why 924 Grand Ave?
 order: 3
 list-style: call-and-response
 ---
 * Why is 924 Grand Ave a site that you are excited about?
-- Young people already utilize Youth Continuum’s services at 924 Grand Ave throughout the day; Y2Y New Haven would enable these young people to have a safe place to stay throughout the night. With this location, young people could have a safe place to sleep at the same place where they have to go already to work on jobs, housing, medical needs, etc. The current building has 4500 sq feet of unused space, which could be activated with a renovation.
-
-Young people tell us that they feel safe at 924 Grand Ave. It's also right on a bus line, and a little removed from downtown which is ideal for youth who are trying to stay away from an abusive family member or a trafficker.
-* Grand Ave has a number of social service programs already on it.  Why are you adding another? Shouldn’t we be promoting commercial use on Grand Ave?  
-- Actually, the Y2Y New Haven proposal isn’t really a new social service but rather an extension of the hours of the current program. Youth Continuum has been at that site for over 20 years and currently operates a drop in center for homeless youth from 9 a.m.- 5 p.m. The Y2Y New Haven program would simply activate an unused basement space and extend its operating hours to 24 hours. That means that instead of young people leaving at 5 p.m. and having nowhere to go, they would be able to stay in a safe and welcoming environment at the same site. They would be off the streets!
-
-In addition to helping young people get safely off the streets, the envisioned renovation will refresh the facade, making it more aesthetically appealing. We would welcome anyone who is interested in being part of making an exterior project happen to reach out!
+- Young people already utilize Youth Continuum’s services at 924 Grand Ave throughout the day; Y2Y New Haven would enable these young people to have a safe place to stay throughout the night.
+* Wouldn't this involve adding space?
+- The current building has 4500 sq feet of space that's currently sitting empty. We would renovate these spaces to make use of what's going unused at 924 Grand Ave.
+* Are there any other reasons 924 Grand Ave is a good fit?
+- Young people tell us that they feel safe at 924 Grand Ave. It's also right on a bus line, and a little removed from downtown which is ideal for youth who are trying to stay away from an abusive family member or a trafficker.
+* Grand Ave has a number of social service programs already on it.  Why are you adding another?
+- The Y2Y New Haven proposal isn’t really a new social service but an extension of the hours of the current 9 a.m.- 5 p.m drop in center Youth Continuum has be running for years. The Y2Y New Haven program would only extend its operating hours to 24 hours.
+* Why is extending the program important?
+- The 24 hour extension would mean that instead of young people leaving at 5 p.m. and having nowhere to go, they would be able to stay in a safe and welcoming environment at the same site. They would be off the streets!
+* Doesn't 924 Grand Ave look a little worn down these days?
+- In addition to helping young people get safely off the streets, our renovation will refresh the facade, making it freshly cleaned and a bit nicer to look at. We would welcome anyone who is interested in being part of making an exterior project happen to reach out!
