--- a/_posts/2019-01-17-whats-y2y.md
+++ b/_posts/2019-01-17-whats-y2y.md
@@ -11,8 +11,10 @@ list-style: call-and-response
 * Why does Y2Y use this model?
 - Research shows that if young people are off the streets and in a safe, trusted environment when they are young adults, they are dramatically less likely to be homeless when they are adults. Since Y2Y started in Cambridge, MA in 2015, it has since served over 250 unique young adults.
 * Does the Y2Y model work?
-- Since it began in Cambridge, MA in 2015, Y2Y has been very effective, with 81% of the youth it serves reporting that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who already have jobs. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y Harvard Square, its program in Cambridge. Significantly, our neighbors in Cambridge, MA, tell us that that after just three years, they “can’t imagine a Cambridge without Y2Y.”
+- Since 2015, when started in Cambridge, MA, Y2Y has been very effective.81% of the youth it serves report that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who already have jobs. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y's Cambridge location.
+* How does Cambridge, MA feel about Y2Y?
+- We're thrilled to say our neighbors in Cambridge tell us that that after just three years, they “can’t imagine a Cambridge without Y2Y.”
 * What services does Y2Y hope to add there?
-- If approved, the Y2Y New Haven would renovate unused space at 924 Grand Ave to create 20 beds for youth, allowing us to provide 24-hour services for youth experiencing homelessness. This collaboration would make it easier for youth to get resources critical to their pathway out of homelessness, and ensure that young people can get off and stay off the streets.
+- If approved, the Y2Y New Haven would renovate unused space at 924 Grand Ave to create 20 beds for youth, allowing us to provide 24-hour services for youth experiencing homelessness. This collaboration would make it easier for youth to get critical resources and ensure that young people can get off and stay off the streets.
 * Why are these services necessary?
 - Unfortunately, about 816 young adults (age 18-24) in Greater New Haven experienced homelessness on a given night in 2018; yet there are only 6 emergency shelter beds for youth here in New Haven.
