Pushed text edits

--- a/_posts/2019-01-17-924-grand.md
+++ b/_posts/2019-01-17-924-grand.md
@@ -4,7 +4,7 @@ order: 3
 list-style: call-and-response
 ---
 * Why is 924 Grand Ave a site that you are excited about?
-- Young people already utilize Youth Continuum’s services at 924 Grand Ave throughout the day; Y2Y New Haven would enable these young people to have a safe place to stay throughout the night.
+- Young people already access case management, mental healthcare, support accessing social services, housing, jobs, diapers, and food at 924 Grand Ave throughout the day. Y2Y New Haven would enable these young people to have a safe place to stay throughout the night.
 * Wouldn't this involve adding space?
 - The current building has 4500 sq feet of space that's currently sitting empty. We would renovate these spaces to make use of what's going unused at 924 Grand Ave.
 * Are there any other reasons 924 Grand Ave is a good fit?
