--- a/_posts/2019-01-17-whats-y2y.md
+++ b/_posts/2019-01-17-whats-y2y.md
@@ -5,16 +5,16 @@ list-style: call-and-response
 ---
 
 * What does Y2Y do?
-- Y2Y’s mission is to help homeless young people by getting them quickly off the streets into a safe and welcoming environment, and providing them a pathway out of homelessness. Y2Y builds trust with homeless youth by using young volunteers to run many of its services: a “youth-to-youth” model.
+- Y2Y’s mission is to help homeless young people by getting them quickly off the streets into a safe and welcoming environment, and providing them a pathway out of homelessness. Y2Y builds trust with youth experiencing homelessness by using young volunteers to run many of its services: a “youth-to-youth” model.
 * What's the Y2Y model?
-- Based on the trust Y2Y develops, helps youth access resources including medical and mental healthcare, legal aid, financial literacy, culinary programming, and case management.
+- Based on the trust Y2Y develops, they help youth access resources including medical and mental healthcare, legal aid, financial literacy, culinary programming, and case management.
 * Why does Y2Y use this model?
 - Research shows that if young people are off the streets and in a safe, trusted environment when they are young adults, they are dramatically less likely to be homeless when they are adults. Since Y2Y started in Cambridge, MA in 2015, it has since served over 250 unique young adults.
 * Does the Y2Y model work?
-- Since 2015, when started in Cambridge, MA, Y2Y has been very effective.81% of the youth it serves report that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who already have jobs. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y's Cambridge location.
+- Since opening in 2015 in Cambridge, MA, Y2Y has been very effective. 81% of the youth it serves report that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who already have jobs. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y's Cambridge location.
 * How does Cambridge, MA feel about Y2Y?
-- We're thrilled to say our neighbors in Cambridge tell us that that after just three years, they “can’t imagine a Cambridge without Y2Y.”
-* What services does Y2Y hope to add there?
+- We're thrilled to say our neighbors in Cambridge tell us that that after just three years, they “can’t imagine a Cambridge without Y2Y.” We were also lucky enough to receive the Cambridge GLBT Community Impact Award and the Mass Challenge Boston Gold Award.
+* What services does Y2Y hope to add in New Haven?
 - If approved, the Y2Y New Haven would renovate unused space at 924 Grand Ave to create 20 beds for youth, allowing us to provide 24-hour services for youth experiencing homelessness. This collaboration would make it easier for youth to get critical resources and ensure that young people can get off and stay off the streets.
 * Why are these services necessary?
-- Unfortunately, about 816 young adults (age 18-24) in Greater New Haven experienced homelessness on a given night in 2018; yet there are only 6 emergency shelter beds for youth here in New Haven.
+- Unfortunately, about 816 young adults (age 18-24) in Greater New Haven experienced homelessness on a given night in 2018; yet there are only 12 emergency shelter beds for youth here in New Haven. Youth don’t feel safe in adult shelters, and have few other options.
