--- a/_posts/2019-01-17-924-grand.md
+++ b/_posts/2019-01-17-924-grand.md
@@ -4,14 +4,12 @@ order: 3
 list-style: call-and-response
 ---
 * Why is 924 Grand Ave a site that you are excited about?
-- Young people already access case management, mental healthcare, support accessing social services, housing, jobs, diapers, and food at 924 Grand Ave throughout the day. Y2Y New Haven would enable these young people to have a safe place to stay throughout the night.
-* Wouldn't this involve adding space?
-- The current building has 4500 sq feet of space that's currently sitting empty. We would renovate these spaces to make use of what's going unused at 924 Grand Ave.
+- Our proposed location is already familiar to and trusted by the young people that Y2Y New Haven will serve. At 924 Grand Ave, young people access case management, mental healthcare, support accessing social services, housing, jobs, diapers, and food throughout the day. With Y2Y’s overnight services, young people will also have a safe place to stay throughout the night and have access to a continuity of social services through our 24-hour wraparound service model.
 * Are there any other reasons 924 Grand Ave is a good fit?
-- Young people tell us that they feel safe at 924 Grand Ave. It's also right on a bus line, and a little removed from downtown which is ideal for youth who are trying to stay away from an abusive family member or a trafficker.
+- Young people tell us that they feel safe at 924 Grand Ave. It’s easily accessible by public transportation and a little removed from downtown, providing privacy to youth.
 * Grand Ave has a number of social service programs already on it.  Why are you adding another?
-- The Y2Y New Haven proposal isn’t really a new social service but an extension of the hours of the current 9 a.m.- 5 p.m drop in center Youth Continuum has be running for years. The Y2Y New Haven program would only extend its operating hours to 24 hours.
+- As a program under Youth Continuum, Y2Y New Haven will be an extension of the Drop-In Center’s current 9 a.m.- 5 p.m hours, which Youth Continuum has run for more than twenty years. The Y2Y New Haven program would extend the Drop-In Center’s operating hours to 24 hours/day and incorporate a student-volunteer presence to provide an opportunity for youth to collaborate with their peers to implement more youth-specific programming and a more welcoming environment.
 * Why is extending the program important?
-- The 24 hour extension would mean that instead of young people leaving at 5 p.m. and having nowhere to go, they would be able to stay in a safe and welcoming environment at the same site. They would be off the streets!
+- By extending to a 24-hour wraparound service model, instead of forcing young people out of the space at 5pm, and leaving them with nowhere to go, they would be able to stay in our safe and welcoming space. They would be off the streets!
 * Doesn't 924 Grand Ave look a little worn down these days?
-- In addition to helping young people get safely off the streets, our renovation will refresh the facade, making it freshly cleaned and a bit nicer to look at. We would welcome anyone who is interested in being part of making an exterior project happen to reach out!
+- In addition to helping young people get safely off the streets, our renovation will refresh 924 Grand Avenue’s current facade, incorporate natural lighting, and update security lighting to create a welcoming and vibrant addition to Grand Avenue! Our talented team of architects—led by Turner Brooks and Duo Dickinson—are in the initial process of designing a space that reflects these updates.
