--- a/_posts/2019-01-17-whats-y2y.md
+++ b/_posts/2019-01-17-whats-y2y.md
@@ -4,17 +4,21 @@ order: 1
 list-style: call-and-response
 ---
 
-* What does Y2Y do?
-- Y2Y’s mission is to help homeless young people by getting them quickly off the streets into a safe and welcoming environment, and providing them a pathway out of homelessness. Y2Y builds trust with youth experiencing homelessness by using young volunteers to run many of its services: a “youth-to-youth” model.
-* What's the Y2Y model?
-- Based on the trust Y2Y develops, they help youth access resources including medical and mental healthcare, legal aid, financial literacy, culinary programming, and case management.
-* Why does Y2Y use this model?
-- Research shows that if young people are off the streets and in a safe, trusted environment when they are young adults, they are dramatically less likely to be homeless when they are adults. Since Y2Y started in Cambridge, MA in 2015, it has since served over 250 unique young adults.
-* Does the Y2Y model work?
-- Since opening in 2015 in Cambridge, MA, Y2Y has been very effective. 81% of the youth it serves report that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who already have jobs. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y's Cambridge location.
+* What does Y2Y New Haven do?
+- Y2Y New Haven’s mission is to help disrupt the cycle of homelessness through opening a student-run and gender-inclusive overnight programs for young people (ages 18-24) experiencing homelessness. Y2Y New Haven focuses on getting young people quickly off the streets into a safe and welcoming environment supported by concrete pathways out of homelessness and opportunities for leadership development.
+* What does Y2Y stand for?
+- Y2Y stands for youth-to-youth. Our youth-to-youth model builds trust. Fully-trained student volunteers will work collaboratively alongside Youth Continuum’s professional staff to provide affirming and youth-specific programming driven by youth guest input. Our youth-to-youth model is grounded in evidence that young people experiencing homelessness feel safer and more willing to engage in services in a youth-driven environment. Relationships between guests and staff also help youth develop a stable foundation of trust and confidence as they transition out of homelessness. We have a dedicated Youth Decision-Making Board, which is composed of both youth with lived experience of homelessness and college volunteers, who help develop Y2Y New Haven’s service model and overnight programming policy. It is informed by the factors that are important to youth safety and growth.
+* What is Y2Y New Haven's model?
+- Y2Y New Haven’s model focuses on sanctuary, pathways, and advocacy to disrupt the cycle of homelessness for young people. First, Y2Y gets young people off the streets and into immediate sanctuary. Y2Y provides a stable environment where youth can rest and recover, including access to basic needs like beds, showers, meals, laundry, and computers. Second, Y2Y connects youth to services like medical and mental healthcare, legal aid, LGBTQ+ resources, financial literacy, and professional development to support guests in establishing pathways out of homelessness. Finally, Y2Y’s advocacy model supports youth in using their own experiences to act as leaders to direct attention and resources to ending youth homelessness.
+* Why does Y2Y New Haven use this model?
+- Y2Y New Haven acts as an early intervention point. Research shows that young people who enter a safe and trusted program when they are young are dramatically less likely to experience chronic homelessness as adults.
+* Does the Y2Y New Haven model work?
+- Since opening in 2015 in Cambridge, MA, Y2Y has served over 300 youth. 81% of the youth it serves report that they leave Y2Y on a pathway out of homelessness. 30% obtain jobs while staying at Y2Y in addition to 20-25% who are already employed. 83% of Y2Y’s youth report feeling “safe” or “very safe” at Y2Y’s Harvard Square location.
 * How does Cambridge, MA feel about Y2Y?
-- We're thrilled to say our neighbors in Cambridge tell us that that after just three years, they “can’t imagine a Cambridge without Y2Y.” We were also lucky enough to receive the Cambridge GLBT Community Impact Award and the Mass Challenge Boston Gold Award.
+- We’re thrilled to say our neighbors in Cambridge tell us that after just three years, they “can’t imagine a Cambridge without Y2Y.” We were also lucky enough to receive the Cambridge GLBT Community Impact Award and the Mass Challenge Boston Gold Award.
 * What services does Y2Y hope to add in New Haven?
-- If approved, the Y2Y New Haven would renovate unused space at 924 Grand Ave to create 20 beds for youth, allowing us to provide 24-hour services for youth experiencing homelessness. This collaboration would make it easier for youth to get critical resources and ensure that young people can get off and stay off the streets.
+- As an overnight program under Youth Continuum, Y2Y New Haven would expand Youth Continuum’s daytime drop-in services into a 24-hour service space that includes medical, legal, and housing aid.
+* What would Y2Y New Haven bring to Grand Ave?
+- Y2Y New Haven would comprehensively remodel Youth Continuum’s Drop-In Center at 924 Grand Avenue. The building will be renovated to incorporate a graceful facade, more natural light and updated security lighting. Further, Y2Y New Haven will dedicate part of its proposed site to a social enterprise business that will provide stable employment to young people and offer a vibrant amenity to the community.
 * Why are these services necessary?
-- Unfortunately, about 816 young adults (age 18-24) in Greater New Haven experienced homelessness on a given night in 2018; yet there are only 12 emergency shelter beds for youth here in New Haven. Youth don’t feel safe in adult shelters, and have few other options.
+- Unfortunately, about 816 young adults (age 18-24) in Greater New Haven experienced homelessness on a given night in 2018; yet Youth Continuum provides the only 12 emergency beds for youth in New Haven. On any given day, 15-25 youth would rather wait for a Youth Continuum’s youth-specific program than enter an adult program where they don’t feel safe. 
